# tap-yahooquery

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
tap_yahooquery/: __init__.py  __main__.py  client.py  helpers.py  schema.py  streams.py  tap.py
tests/: __init__.py  test_core.py
